# vocadb-notification-reader

./: .editorconfig  .eslintrc.js  .travis-ci.yml  .travis.yml  Cargo.toml  Dockerfile  README.md  checkstyle.xml  lombok.config  package.json  pom.xml  spotbugs-exclude.xml  vue.config.js
.github/workflows/: backend.yml  backend_build.yml  backend_deploy.yml  frontend.yml  frontend_deploy.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/client/: errors.rs  http_client.rs  mod.rs
backend/src/client/models/: artist.rs  query.rs  tag.rs  user.rs
backend/src/main/rust/: main.rs
backend/src/main/rust/client/: client.rs  errors.rs  mod.rs
backend/src/main/rust/client/models/: pv.rs  query.rs  song.rs
backend/src/main/rust/service/: dto.rs
backend/src/main/rust/web/: controller.rs  dto.rs  middleware.rs
backend/src/service/: mod.rs  notifications.rs
backend/src/web/: controller.rs  errors.rs  middleware.rs
frontend/: package.json  tsconfig.json  vue.config.js
frontend/src/main/typescript/backend/: axios.ts  index.ts
frontend/src/main/typescript/components/: NotificationTable.vue
frontend/src/main/typescript/layouts/: AppLayout.vue  EmptyLayout.vue
frontend/src/main/typescript/utils/: index.ts
public/: index.html
src/main/nginx/: nginx-heroku.conf
src/main/resources/: banner.txt
src/main/resources/config/: application-dev.properties  application.properties
src/main/rust/: controller.rs  errors.rs  main.rs
src/main/rust/client/: client.rs
src/main/rust/client/models/: language.rs  pv.rs  song.rs  user.rs  (+1 more)
src/main/rust/service/: auth.rs  dto.rs  errors.rs  mod.rs  notifications.rs
src/main/rust/web/: errors.rs  middleware.rs
src/main/typescript/backend/: authenticationExpireHandler.ts  axios.ts  dto.ts  index.ts
src/main/typescript/components/: LoginDialog.vue  LogoutButton.vue  NotificationTable.vue  SongNotificationPopup.vue  SwitchButtonItemsPerPage.vue  SwitchButtonLocale.vue  SwitchButtonPreferredLanguage.vue  SwitchButtonPreferredService.vue  SwitchButtonTheme.vue  TheAppBar.vue
src/main/typescript/layouts/: AppLayout.vue  EmptyLayout.vue
src/main/typescript/styles/: hide-scrollbar.scss
src/main/typescript/utils/: index.ts
(+228 files in other folders)
