[package]
name = "vocadb-notification-reader"
version = "0.1.0"
authors = ["Alexander Biryukov <sanya.rnd@gmail.com>"]
edition = "2018"

[[bin]]
name = "vocadb-notification-reader"
path = "src/main/rust/main.rs"

[dependencies]
futures = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.8"

strum = "0.20"
strum_macros = "0.20"
derive_more = "0.99"

actix-web = { version = "3", features = ["rustls"] }
actix-web-httpauth = "0.5"
jsonwebtoken = "7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
typetag = "0.1"
