[package]
name = "vocadb-notification-reader"
version = "0.1.0"
authors = ["Alexander Biryukov <sanya.rnd@gmail.com>"]
edition = "2021"

[[bin]]
name = "vocadb-notification-reader"
path = "src/main/rust/main.rs"

[dependencies]
thiserror = "1"
anyhow = "1"

chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"

log = "0.4"
env_logger = "0.9"

strum = "0.20"
strum_macros = "0.20"

base64 = "0.13"
aes = "0.7"
block-modes = "0.8.1"
hex-literal = "0.3.4"

actix-web = { version = "4.0.0-beta.19", features = ["rustls"] }
awc = { version = "3.0.0-beta.18", features = ["rustls"] }
actix-web-httpauth = "0.6.0-beta.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
typetag = "0.1"
