[package]
name = "vocadb-notification-reader"
version = "0.1.0"
authors = ["Alexander Biryukov <sanya.rnd@gmail.com>"]
edition = "2021"

[[bin]]
name = "vocadb-notification-reader"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1.7"

log = "0.4"
env_logger = "0.10"

strum = "0.24"
strum_macros = "0.24"

base64 = "0.13"
aes = "0.7"
block-modes = "0.8"
hex-literal = "0.3"

actix-web = { version = "4.2", features = ["rustls"] }
awc = { version = "3.0", features = ["rustls"] }
actix-web-httpauth = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
typetag = "0.2"
